[gd_scene load_steps=2 format=3 uid="uid://tjavm26wsluq"]

[ext_resource type="Script" path="res://scripts/visualizer.gd" id="1_vl812"]

[node name="Visualizer" type="Window"]
size = Vector2i(350, 200)
theme_override_font_sizes/title_font_size = 5
script = ExtResource("1_vl812")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 347.0
offset_bottom = 201.0
color = Color(0.103744, 0.103744, 0.103743, 0.607843)

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 5.0
offset_top = 122.0
offset_right = 144.0
offset_bottom = 153.0

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = -3.0
offset_top = 81.0
offset_right = 280.0
offset_bottom = 112.0
placeholder_text = "Enter comma-seperated integers "
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true
caret_mid_grapheme = true

[node name="enter" type="Button" parent="LineEdit"]
layout_mode = 0
offset_left = 289.0
offset_top = -1.0
offset_right = 339.0
offset_bottom = 30.0
text = "Enter"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 2.0
offset_top = -30.0
offset_right = 94.0
offset_bottom = 62.0

[node name="Binary_search_input" type="LineEdit" parent="."]
offset_right = 67.0625
offset_bottom = 31.0

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="LineEdit/enter" to="." method="_on_enter_pressed"]
